# ghostbuster-ci-cd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ghostbuster.yml
dashboard/: app.py
demo_vulnerable/: __init__.py  bad_app.py  weak_crypto.py
ghostbuster/: __init__.py  cli.py  engine.py  risk.py  severity.py
ghostbuster/reporting/: __init__.py  report.py
ghostbuster/scanners/: __init__.py  ai_patterns.py  dangerous_code.py  hallucinated_deps.py  secrets.py  security_tools.py
tests/: __init__.py  test_scanners.py
